test/must_fail/api/must_fail_ngspice_command.ref
error: ngspice_command(code) require exactly 1 arguments but 2 was given
  [must_fail_ngspice_command.ngjs:0:0] in <anonymous>()
    Internal.ngspice_command('help', 'asdf');
             ^

hint: function 'ngspice_command(code)' was called with 2 arguments
hint: argument #0 was help (string)
hint: argument #1 was asdf (string)

Stack trace (1 frames):
  [must_fail_ngspice_command.ngjs:0:0] in <anonymous>()
    Internal.ngspice_command('help', 'asdf');
             ^

exit(7)
