test/must_fail/api/must_fail_ngspice_command.ngjs
#!/usr/bin/env ngspicejs
// ngspice_command wants single arg
// linter: ngspicejs-lint
"use strict";

Internal.ngspice_command('help', 'asdf');
